<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Champ de Prénom -->
    <EditText
        android:id="@+id/first_name"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/first_name_hint"
        android:inputType="textPersonName"
        android:importantForAutofill="yes"
        android:autofillHints="name" />

    <!-- Champ de Nom de famille -->
    <EditText
        android:id="@+id/last_name"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/last_name_hint"
        android:inputType="textPersonName"
        android:importantForAutofill="yes"
        android:autofillHints="name" />

    <!-- Champ d'adresse électronique -->
    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:importantForAutofill="yes"
        android:autofillHints="emailAddress" />

    <!-- Champ de mot de passe -->
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:importantForAutofill="yes"
        android:autofillHints="password" />

</LinearLayout>
