<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <!-- Champ de Titre -->
    <EditText
        android:id="@+id/add_title"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/add_a_title"
        android:inputType="textAutoCorrect"
        android:importantForAutofill="yes"
        android:autofillHints="name" />

    <!-- Champ de Type -->
    <EditText
        android:id="@+id/add_type"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/add_type_"
        android:inputType="textAutoCorrect"
        android:importantForAutofill="yes"
        android:autofillHints="name" />

    <!-- Champ Sous-type -->
    <EditText
        android:id="@+id/add_sub_type"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/add_sub_type_"
        android:inputType="textAutoCorrect"
        android:importantForAutofill="yes"
        android:autofillHints="name" />


</LinearLayout>